# szachy

./: CMakeLists.txt  Figura.cpp  Figura.h  Goniec.cpp  Goniec.h  Hetman.cpp  Hetman.h  Kolor.cpp  Kolor.h  Krol.cpp  Krol.h  Pionek.cpp  Pionek.h  Plansza.cpp  Plansza.h  Skoczek.cpp  Skoczek.h  Wieza.cpp  Wieza.h  main.cpp
tests/: test_figura.cpp  test_plansza.cpp  test_szach.cpp
